--- a/design.css
+++ b/design.css
@@ -3,7 +3,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Poppins',sans-serif;
+  font-family: 'Stylish', sans-serif;
+  font-family: 'Ysabeau SC', sans-serif;
   text-decoration: none;
   list-style: none;
   scroll-behavior: smooth;
@@ -193,4 +194,18 @@ a:hover{
 }
 a.active{
   color: #f59c69 ;
+}
+
+.logo {
+  width: 100px; /* Adjust the size according to your preference */
+  height: 100px;
+  border-radius: 50%; /* Creates the circular shape */
+  overflow: hidden; /* Ensures the image stays within the circular shape */
+  margin-top: 20px;
+}
+
+.logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image fills the circular area */
 }
